WIP: Remove order leaf
These lists should be order-by user. Ditches order.

// FIXME: perhaps we should just order them

Change-Id: I1bb4d0a083cf6183833924f0cab3da3b61d113bd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>